<resources>
    <string name="app_name">Login Apps</string>
    <string name="title">Haya App</string>
    <string name="deskripsi">Selamat datang, silakan login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Selamat Datang</string>
    <string name="layanan">Layanan Kami</string>
    <string name="pilihan">Pilihan bouquet terbaik</string>
    <string name="beauty">Beauty in Every Bloom</string>
    <string name="deskCustom2">• Bouquet Wisuda&#10;• Bouquet Ulang Tahun&#10;• Custom Bouquet&#10;• Anniversary Bouquet</string>
    <string name="deskCustom1">Kami menyediakan bouquet bunga terbaik untuk berbagai momen spesial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>